Fixing z-index of site feedback button so it sits behind the feedback modal

--- a/app/assets/stylesheets/partials/buttons/_site-feedback.scss
+++ b/app/assets/stylesheets/partials/buttons/_site-feedback.scss
@@ -16,7 +16,8 @@
 	color: #fff;
 	@include to-rem(padding, $spacing-half);
 	position: fixed;
-	z-index: $z-index-high - 1;
+	/* Has to be less than '1000000' as that is the `z-index` value of the JIRA issue tracker modal */
+	z-index: 999999;
 	right: 0;
 	@include to-rem(bottom, $spacing-base);
 
